--- a/css/mainwp-setup.css
+++ b/css/mainwp-setup.css
@@ -1,3 +1,6 @@
+ul {
+    list-style: outside none none;
+}
 .mwp-setup-content p,
 .mwp-setup-content table {
     font-size: 1em;
@@ -218,7 +221,7 @@ body {
     color: #ccc
 }
 .mwp-setup-steps li {
-    width: 12.5%;
+    width: 11%;
     float: left;
     padding: 0 0 1em;
     margin: 0;
@@ -308,7 +311,7 @@ body {
     list-style-type:none;
 }
 body.mwp-setup{
-    max-width: 920px;
+    max-width: 1080px;
 }
 
 table.widefat {
