Fix curl warnings Add warning/fail to server information Hide mainwp child on dashboard plugins widget Merge with branch01

--- a/css/mainwp.css
+++ b/css/mainwp.css
@@ -1361,6 +1361,13 @@ li.hoverli {
 .mainwp-warning
 {
     padding: 3px 7px ;
+    background: #d98500;
+    clear: both;
+    color: #fff;
+}
+.mainwp-fail
+{
+    padding: 3px 21px ;
     background: #a00;
     clear: both;
     color: #fff;
@@ -2865,4 +2872,7 @@ body.show-upload-plugin .mainwp-upload-plugin {
 
 .mainwp_hide_wpmenu_checkboxes {
     margin: 0;
+}
+.plugin-update-tr .api-deactivate {
+    background-color: #fcf3ef;
 }
