--- a/css/mainwp.css
+++ b/css/mainwp.css
@@ -1,3 +1,195 @@
+/*   ---   MAINWP STYLE   ---     */
+
+/* UI ELEMENTS  */
+
+/* MAINWP - BUTTONS */
+
+
+.mainwp-button-right { float: right; margin-right: 6px !important; }
+
+/* MAINWP - COLORS */
+
+.mainwp-white { color: #fff; }
+.mainwp-red { color: #a00; }
+.mainwp-yellow { color: #ffcc00; }
+.mainwp-blue { color: #00a0d2; }
+.mainwp-green { color: #7fb100; }
+.mainwp-dark-green { color: #446200; }
+
+a.mainwp-white { color: #fff; }
+a.mainwp-red { color: #a00; }
+a.mainwp-blue { color: #00a0d2; }
+a.mainwp-green { color: #7fb100; }
+
+a.mainwp-white:hover { color: #fff; }
+a.mainwp-red:hover { color: #a00; }
+a.mainwp-blue:hover { color: #00a0d2; }
+a.mainwp-green:hover { color: #7fb100; }
+
+a.mainwp-comment-approve,
+a.mainwp-post-publish,
+a.post_submitpublish,
+a.mainwp-comment-viewall,
+a.mainwp-post-viewall {color: #006505;}
+
+a.mainwp-comment-unapprove,
+a.mainwp-post-unpublish,
+a.post_submitunpublish{color: #d98500;}
+
+a.mainwp-comment-spam,
+a.mainwp-comment-trash,
+a.mainwp-post-trash {color: #a00;}
+
+/* MAINWP - SPACING */
+
+.mainwp-padding-5 {padding: 5px;}
+.mainwp-padding-10 {padding: 10px;}
+.mainwp-padding-15 {padding: 15px;}
+.mainwp-padding-20 {padding: 20px;}
+
+.mainwp-padding-top-5 {padding-top:5px;}
+.mainwp-padding-top-10 {padding-top:10px;}
+.mainwp-padding-top-15 {padding-top:15px;}
+.mainwp-padding-top-20 {padding-top:20px;}
+
+.mainwp-padding-bottom-5 {padding-bottom:5px;}
+.mainwp-padding-bottom-10 {padding-bottom:10px;}
+.mainwp-padding-bottom-15 {padding-bottom:15px;}
+.mainwp-padding-bottom-20 {padding-bottom:20px;}
+
+.mainwp-margin-right-1 {margin-right: 1em;}
+.mainwp-margin-right-2 {margin-right: 2em;}
+.mainwp-margin-right-3 {margin-right: 3em;}
+.mainwp-margin-left-1 {margin-left: 1em;}
+.mainwp-margin-left-2 {margin-left: 2em;}
+.mainwp-margin-left-3 {margin-left: 3em;}
+
+/* MAINWP - LAYOUT */
+
+.mainwp-left { float: left; }
+.mainwp-right { float: right; }
+.mainwp-clear { clear: both; }
+
+.mainwp-center { text-align: center; }
+.mainwp-t-align-left { text-align: left; }
+.mainwp-t-align-right { text-align: right; }
+.mainwp-t-align-center { text-align: center; }
+
+.mainwp-small { font-size: 11px; }
+.mainwp-large { font-size: 18px; }
+
+.mainwp-row {padding: 10px; border-top: 1px solid #e5e5e5;}
+.mainwp-row-top {padding: 10px;border-top: 0px !important;}
+.mainwp-sub-row {padding: 10px;border-top: 1px dashed #e5e5e5;}
+
+.mainwp-sub-section { background: #fafafa; }
+
+.mainwp-cols-1 { width: 100%; }
+.mainwp-cols-2 { width: 50%; }
+.mainwp-cols-3 { width: 33.333333%; }
+.mainwp-cols-4 { width: 25%; }
+.mainwp-cols-5 { width: 20%; }
+.mainwp-cols-6 { width: 16.666666%; }
+.mainwp-cols-10 { width: 10%; }
+
+.mainwp-cols-2.mainwp-left {width: calc( 50% - 1em );margin-right: 1em;}
+.mainwp-cols-2.mainwp-right {width: calc( 50% - 1em );margin-left: 1em;}
+.mainwp-cols-3.mainwp-left {width: calc( 33.333333% - 1em );margin-right: 1em;}
+.mainwp-cols-3.mainwp-right {width: calc( 33.333333% - 1em );margin-left: 1em;}
+
+.mainwp-postbox-actions-top {
+    padding: 10px;
+    clear: both;
+    border-bottom: 1px solid #ddd;
+    background: #f5f5f5;
+}
+
+.mainwp-postbox-actions-mid {
+    padding: 10px;
+    clear: both;
+    border-bottom: 1px solid #ddd;
+    border-top: 1px solid #ddd;
+    background: #f5f5f5;
+}
+
+.mainwp-postbox-actions-bottom {
+    padding: 10px;
+    clear: both;
+    border-top: 1px solid #ddd;
+    background: #f5f5f5;
+}
+
+.mainwp-action-row { min-height: 20px; }
+
+.mainwp-notice {
+    margin: 5px 0 15px;
+    padding: .6em;
+    background: #fff;
+    box-shadow: 0 1px 1px rgba(0,0,0,.04);
+    vertical-align: middle;
+}
+
+.mainwp-notice p { display: inline-block; }
+
+.mainwp-notice:before {
+    color: #fff;
+    font-family: 'FontAwesome';
+    display: inline-block;
+    font-size: 2em;
+    font-weight: normal;
+    position: relative;
+    width: 0px;
+    top: 3px;
+}
+
+.mainwp-notice-green { border-left: 40px solid #7fb100; }
+.mainwp-notice-blue { border-left: 40px solid #21759b; }
+.mainwp-notice-red { border-left: 40px solid #a00; }
+.mainwp-notice-yellow { border-left: 40px solid #ffcc00; }
+
+.mainwp-notice-green:before {
+    content: "\f00c";
+    left: -40px;
+}
+
+.mainwp-notice-blue:before {
+    content: "\f0eb";
+    left: -35px;
+}
+
+.mainwp-notice-blue.twitter:before {
+    content: "\f099";
+    left: -39px;
+}
+
+.mainwp-notice-blue.twitter {}
+
+.mainwp-notice-yellow:before {
+    content: "\f129";
+    left: -32px;
+}
+
+.mainwp-notice-red:before {
+    content: "\f12a";
+    left: -32px;
+}
+
+
+/* UI FIXES */
+
+.mainwp-ui a { text-decoration: none !important; }
+.mainwp-ui a:focus { -webkit-box-shadow: none !important; box-shadow: none !important; color: inherit;}
+
+
+
+/* MAINWP GENERAL STYLES */
+#mainwp_page_updates_tab-contextbox-1 .inside,
+#mainwp_page_managesites-metaboxes-contentbox-1 .inside,
+#toplevel_page_mainwp_tab-contentbox-1 .inside {
+    padding: 0;
+    margin: 0;
+}
+
 .mainwp-action-lnks, .mainwp-theme-lnks {
     padding: 1em;
     border-top: 1px solid #e5e5e5;
@@ -2610,44 +2802,13 @@ input[type=checkbox].mainwp-checkbox3:checked {
     text-decoration: none !important;
 }
 
-.mainwp-white {
-    color: #fff;
-}
-
-.mainwp-red {
-    color: #bb7239;
-}
-
 .mainwp-error-red {
     color: #a00;
 }
 
-.mainwp-blue {
-    color: #00a0d2;
-}
-
-.mainwp-green {
-    color: #7fb100;
-}
 
 .mainwp-success-green {
     color: #7fb100;
-}
-
-.mainwp-white:hover {
-    color: #fff;
-}
-
-.mainwp-red:hover{
-    color: #fff;
-}
-
-.mainwp-blue:hover {
-    color: #fff;
-}
-
-.mainwp-green:hover {
-    color: #fff;
 }
 
 .mainwp-left-margin-2 {
@@ -2884,3 +3045,17 @@ body.show-upload-plugin .mainwp-upload-plugin {
 .sync-ext-row{
     margin: 5px 0;
 }
+.plugin-update-tr.active > td > div.update-message {
+    margin: 10px 20px 10px 40px;
+    padding: 10px;
+}
+.mainwp-postbox-actions-bottom {
+    padding: 10px;
+    clear: both;
+    border-top: 1px solid #ddd;
+    background: #f5f5f5;
+}
+
+/* Welcome Panel */
+
+#mainwp-welocme-bar { padding: 0; }
