Tweaked: auto request extensions update information, ticket #1236 Added: add and edit site hook to support developers Fixed: PHP Max Execution Time warning in server information, #10913

--- a/css/mainwp.css
+++ b/css/mainwp.css
@@ -1183,6 +1183,7 @@ h3.mainwp_box_title {
     /*width: 580px;*/
     height: auto;
     width: auto;
+    overflow-y: auto;
 }
 
 #mainwp_notes #mainwp_notes_note,
