- Added check http response feature - Added check requires backup for primary backups - Added: hook mainwp_getformatemail to support get format email

--- a/css/mainwp.css
+++ b/css/mainwp.css
@@ -2230,3 +2230,13 @@ div.pw-wrap.form-invalid {
 .post-type-bulkpage #wpwrap .wrap h1 a.page-title-action {
     display: none;
 }
+span.http-ok-status {
+    display: none;
+}
+div.http-response-ok span.http-ok-status{
+    display: inline-block;
+}
+div.http-response-ok span.http-notok-status{
+    display: none;
+}
+
