Added some hooks Added mainwp custom menu Fixed extensions update notification issue

--- a/css/mainwp.css
+++ b/css/mainwp.css
@@ -74,6 +74,7 @@ a.mainwp-post-trash {color: #a00;}
 .mainwp-margin-left-1 {margin-left: 1em;}
 .mainwp-margin-left-2 {margin-left: 2em;}
 .mainwp-margin-left-3 {margin-left: 3em;}
+.mainwp-margin-top-0 {margin-top: 0;}
 
 /* MAINWP - LAYOUT */
 
@@ -2243,3 +2244,133 @@ div.http-response-ok span.http-notok-status{
     display: none;
 }
 
+/* Custom Menu */
+
+#mainwpmenulogo img {
+    height: 36px;
+    margin: 10px 10px 3px 10px;
+}
+.mainwp-ui-leftmenu #wpbody-content div.mainwp-wrap {
+    float: left;
+    width: calc(100% - 220px);
+    margin-left: 200px;
+}
+
+.mainwp-ui-leftmenu .mainwp_leftmenu_wrap {
+    width: 200px;       
+    background-color: #fff;
+    margin: 0 20px 0 -20px;
+    position: fixed;
+    top: 32;
+    left: 32;
+}
+.mainwp_leftmenu_content {    
+    height: calc(100vh - 80px);
+}
+
+.mainwp-menu-sub-wrap {
+    overflow-y: auto;
+    overflow-x: hidden !important;
+    max-height: calc(100vh - 200px);
+}
+.mainwp_leftmenu_content > ul {
+    margin: 0px;
+}
+.mainwp_leftmenu_content > ul > li {
+    padding: 0; 
+    border-bottom: 1px solid #e5e5e5;    
+    margin: 0px !important;
+}
+.mainwp_leftmenu_content > ul > li.mainwp-menu-first-item {
+    border-top: 1px solid #e5e5e5;
+}
+.mainwp_leftmenu_content .mainwp-menu-name{
+    padding: 10px;   
+    display:inline-block;    
+    width: 75%;
+}
+.mainwp-menu-sub-wrap{
+    background: #fafafa; 
+}
+.mainwp-menu-sub-wrap > li {
+    padding: 0;
+    margin: 0px !important;
+    border-top: 1px dashed #e5e5e5; 
+   
+}
+.menu-sites-wrap .mainwp-menu-sub-wrap > li{
+    padding-right: 3px;
+}
+.mainwp-menu-sub-wrap .mainwp-menu-name{
+    padding: 10px 0px 10px 15px;  
+    width: 71%;
+}
+.mainwp-menu-sub-item .menu-icon{
+    margin:5px;
+}
+.mainwp-menu-sub-item.closed .mainwp-menu-sub2-wrap {
+    display: none;
+}
+
+.mainwp-menu-item > div.handle {
+    cursor: pointer;
+}
+.mainwp-menu-item.closed .mainwp-menu-sub-wrap {
+    display: none;
+}
+
+.mainwp-menu-sub2-wrap > li{
+    padding: 0;
+    margin: 0px !important;
+    border-top: 1px dashed #e5e5e5;    
+}
+.mainwp-menu-sub2-wrap .mainwp-menu-name{
+    padding: 10px 10px 10px 30px;   
+}
+
+.no-icon .mainwp-menu-item-desc {    
+    margin-left: 0;
+}
+.mainwp-menu-item-desc {
+    color: #e5e5e5;
+    font-size: 13px;
+    margin-left: 15px;
+}
+
+.mainwp_leftmenu_content .handlediv {
+    float: right;
+    height: 30px;
+    width: 25px;
+    cursor: pointer;
+}
+
+.mainwp_leftmenu_content .handlediv:before,
+.mainwp-menu-sub-wrap .handlediv:before
+{
+	content: '\f142';
+}
+
+.mainwp_leftmenu_content li.closed .handlediv:before,
+.mainwp-menu-sub-wrap li.closed .handlediv:before
+{
+	content: '\f140';
+}
+
+.mainwp_leftmenu_content .handlediv:before,
+.mainwp-menu-sub-wrap .handlediv:before {
+	right: 12px;
+	font: normal 20px/1 'dashicons';
+	speak: none;
+	display: inline-block;
+	padding: 8px 10px;
+	top: 0;
+	position: relative;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	text-decoration: none !important;
+}
+
+.leftmenu_sites_actions{
+    float: right;
+    margin: 13px 0 0;    
+}
